--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "none",
     "build": "babel ./src -d build/",
+    "migrate": "sequelize db:migrate",
+    "migrate:drop": "sequelize db:migrate:undo:all",
+    "migrate:reset": "sequelize db:migrate:undo:all && npm run migrate",
     "start:dev": "nodemon --watch src --watch .env --watch package.json --watch .eslintrc src/index.js --exec babel-node --presets es2015,stage-2"
   },
   "repository": {
@@ -39,9 +42,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "express-rate-limit": "^4.0.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.12.1",
+    "sequelize": "^5.19.1",
+    "sequelize-cli": "^5.5.1"
   }
 }
