chore(typescript): setup the app to use typescript
- uninstall babel dependencies
- install typescript and eslint typescript dependencies
- add rules for tsconfig.json
- rename all js to use .ts extension
- install necessary types

[Finishes #168779443]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,26 @@
 {
   "terminal.integrated.fontFamily": "Hack Nerd Font",
   "terminal.integrated.shell.osx": "/bin/zsh",
-  "editor.tabSize": 2,
-  "files.eol": "\n",
-  "javascript.format.enable": false,
+
   "editor.formatOnSave": true,
-  "prettier.trailingComma": "all",
-  "prettier.eslintIntegration": true,
-  "javascript.implicitProjectConfig.checkJs": true
+  "[javascript]": {
+    "editor.formatOnSave": false
+  },
+  "[javascriptreact]": {
+    "editor.formatOnSave": false
+  },
+  "[typescript]": {
+    "editor.formatOnSave": false
+  },
+  "[typescriptreact]": {
+    "editor.formatOnSave": false
+  },
+
+  "eslint.autoFixOnSave": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    { "language": "typescript", "autoFix": true },
+    { "language": "typescriptreact", "autoFix": true }
+  ]
 }
