--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,18 @@
 {
   "root": true,
-  "extends": "airbnb-base",
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "airbnb-typescript/base",
+    "plugin:prettier/recommended"
+  ],
   "env": {
     "node": true,
     "es6": true,
@@ -10,37 +22,14 @@
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
   "rules": {
-    "consistent-return": "error",
-    "no-param-reassign": "error",
-    "comma-dangle": 1,
-    "curly": ["error", "multi-line"],
-    "import/no-unresolved": [
-      2,
-      {
-        "commonjs": true
-      }
-    ],
-    "no-shadow": [
-      "error",
-      {
-        "allow": ["req", "res", "next", "err"]
-      }
-    ],
-    "valid-jsdoc": [
-      "error",
-      {
-        "requireReturn": true,
-        "requireReturnType": true,
-        "requireParamDescription": false,
-        "requireReturnDescription": true
-      }
-    ],
+    "newline-before-return": "error",
+    "complexity": "warn",
+    "newline-after-var": "error",
+    "arrow-parens": "off",
+    "max-lines": "error",
+    "import/prefer-default-export": "off",
+    "no-eq-null": "error",
     "require-jsdoc": [
       "error",
       {
@@ -50,6 +39,16 @@
           "ClassDeclaration": true
         }
       }
-    ]
+    ],
+    "valid-jsdoc": [
+      "error",
+      {
+        "requireReturn": true,
+        "requireReturnType": true,
+        "requireReturnDescription": true,
+        "requireParamDescription": true
+      }
+    ],
+    "no-multiple-empty-lines": "error"
   }
 }
