--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "safescrow-bend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "none",
-    "build": "babel ./src -d build/",
+    "build": "rm -rf ./build/ && tsc",
     "migrate": "sequelize db:migrate",
     "migrate:drop": "sequelize db:migrate:undo:all",
     "migrate:reset": "sequelize db:migrate:undo:all && npm run migrate",
-    "start:dev": "nodemon --watch src --watch .env --watch package.json --watch .eslintrc src/index.js --exec babel-node --presets es2015,stage-2"
+    "start:dev": "nodemon --config \"./util/nodemon.json\"/",
+    "start": "node build"
   },
   "repository": {
     "type": "git",
@@ -22,29 +23,33 @@
   },
   "homepage": "https://github.com/henperi/safescrow-bend#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.1",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.7.9",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
-    "nodemon": "^1.19.0"
+    "eslint-config-airbnb-typescript": "^5.0.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "nodemon": "^1.19.3",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.3",
+    "prettier": "^1.18.2"
   },
   "dependencies": {
+    "@types/sequelize": "^4.28.5",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
+    "@typescript-eslint/parser": "^2.3.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
-    "express-rate-limit": "^4.0.1",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "sequelize": "^5.19.1",
