ch(testing): Set up mocha  and circleci
- set up mocha and chai
- set up circleci
[Finishes #168880587]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,8 @@
     "emitDecoratorMetadata": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "types": ["node"],
+    "types": ["node", "mocha"],
     "typeRoots": ["node_modules/@types"],
-
 
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
