--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "test": "none",
+    "test": "nyc --reporter=html --reporter=text mocha --require ts-node/register tests/**/*.spec.ts",
+    "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" npm run test",
     "build": "rm -rf ./build/ && tsc",
     "migrate": "sequelize db:migrate",
     "migrate:drop": "sequelize db:migrate:undo:all",
@@ -23,24 +24,30 @@
   },
   "homepage": "https://github.com/henperi/safescrow-bend#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.3",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.9",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
     "eslint-config-airbnb-typescript": "^5.0.0",
     "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.1",
-    "nodemon": "^1.19.3",
+    "eslint-plugin-react": "^7.13.0",
+    "mocha": "^6.2.1",
+    "nodemon": "^1.19.0",
+    "nyc": "^14.1.1",
+    "prettier": "^1.18.2",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3",
-    "prettier": "^1.18.2"
+    "typescript": "^3.6.3"
   },
   "dependencies": {
     "@types/sequelize": "^4.28.5",
