chore(sequelize): refactor sequelize setup
- remove sequelize-cli
- refactor sequelize models to use typescript
- add migration scripts to drop, reset and migrate the database

[Starts #168926848]

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,9 +44,11 @@
       "error",
       {
         "requireReturn": true,
-        "requireReturnType": true,
+        "requireReturnType": false,
+        "requireParamType": false,
         "requireReturnDescription": true,
-        "requireParamDescription": true
+        "requireParamDescription": true,
+        "matchDescription": ".+"
       }
     ],
     "no-multiple-empty-lines": "error"
