feat(auth): user signup feature
- install @hapi/joi to assist with data validation
- install jsonwebtoken and bycrypt to assist with authentication
- install shortid to assist with generating unique keys
- create AuthController with method to createUser

[Finishes #165742634]

--- a/.eslintrc
+++ b/.eslintrc
@@ -51,6 +51,7 @@
         "matchDescription": ".+"
       }
     ],
-    "no-multiple-empty-lines": "error"
+    "no-multiple-empty-lines": "error",
+    "@typescript-eslint/no-explicit-any": "error"
   }
 }
