--- a/package.json
+++ b/package.json
@@ -24,17 +24,21 @@
   },
   "homepage": "https://github.com/henperi/safescrow-bend#readme",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.2.3",
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "@types/hapi__joi": "^15.0.4",
+    "@types/jsonwebtoken": "^8.3.4",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.9",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "@types/dotenv": "^6.1.1",
+    "@types/shortid": "0.0.29",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -53,13 +57,17 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "@types/sequelize": "^4.28.5",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
-    "sequelize": "^5.19.1"
+    "sequelize": "^5.19.1",
+    "shortid": "^2.2.15"
   }
 }
