--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,7 @@
       }
     ],
     "no-multiple-empty-lines": "error",
-    "@typescript-eslint/no-explicit-any": "error"
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/indent": "off"
   }
 }
