--- a/package.json
+++ b/package.json
@@ -4,14 +4,27 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
+    "pretest": "npm run migrate:reset",
     "test": "nyc --reporter=html --reporter=text mocha --require ts-node/register tests/**/*.spec.ts",
-    "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" npm run test",
+    "coverage": "nyc npm run test",
     "build": "rm -rf ./build/ && tsc",
     "migrate:reset": "npm run build && node build/db/migrate/reset",
     "migrate:drop": "npm run build && node build/db/migrate/drop",
     "migrate": "npm run build && node build/db/migrate",
     "start:dev": "nodemon --config \"./util/nodemon.json\"/",
     "start": "npm run build && node build"
+  },
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".js"
+    ],
+    "include": ["src"],
+    "exclude": ["**/*.interface.ts", "src/db/migrate", "src/index.ts", "src/db/models/index.ts"],
+    "reporter": [
+      "html"
+    ],
+    "all": true  
   },
   "repository": {
     "type": "git",
@@ -26,6 +39,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.2.3",
+    "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
