--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "pretest": "npm run migrate:reset",
-    "test": "nyc --reporter=html --reporter=text mocha --require ts-node/register tests/**/*.spec.ts",
+    "test": "nyc --reporter=html --reporter=text mocha --require ts-node/register tests/index.spec.ts",
     "coverage": "nyc npm run test",
     "build": "rm -rf ./build/ && tsc",
     "migrate:reset": "npm run build && node build/db/migrate/reset",
