feat(email&sms): implement sms and email sending on authentication
- install neccessary packages for email sending
- install necessary packages for sms sending
- add environmental variables
- add helper methods to send the emails and the sms

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
 
     "allowJs": true
   },
-  "include": ["./src/**/*.ts", "./src/**/*.js", "src/db/models/index.ts"],
-  "exclude": ["./src/public/"]
+  "include": ["./src/@types/", "./src/**/*.ts", "./src/**/*.js", "src/db/models/index.ts"],
+  "exclude": ["./src/public/", "./src/@types/"]
 }
