--- a/package.json
+++ b/package.json
@@ -19,12 +19,19 @@
       ".ts",
       ".js"
     ],
-    "include": ["src"],
-    "exclude": ["**/*.interface.ts", "src/db/migrate", "src/index.ts", "src/db/models/index.ts"],
+    "include": [
+      "src"
+    ],
+    "exclude": [
+      "**/*.interface.ts",
+      "src/db/migrate",
+      "src/index.ts",
+      "src/db/models/index.ts"
+    ],
     "reporter": [
       "html"
     ],
-    "all": true  
+    "all": true
   },
   "repository": {
     "type": "git",
@@ -72,12 +79,16 @@
   },
   "dependencies": {
     "@hapi/joi": "^16.1.7",
+    "@sendgrid/mail": "^6.4.0",
+    "@types/google-libphonenumber": "^7.4.17",
     "@types/sequelize": "^4.28.5",
+    "africastalking": "^0.4.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
+    "google-libphonenumber": "^3.2.6",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
