--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "pretest": "npm run migrate:reset",
+    "pretest": "npm run migrate:reset && npm run seed:all",
     "test": "nyc --reporter=html --reporter=text mocha --require ts-node/register tests/index.spec.ts",
     "coverage": "nyc npm run test",
     "build": "rm -rf ./build/ && tsc",
     "migrate:reset": "npm run build && node build/db/migrate/reset",
     "migrate:drop": "npm run build && node build/db/migrate/drop",
     "migrate": "npm run build && node build/db/migrate",
+    "seed:all": "NODE_ENV=development ts-node src/db/seeders",
     "start:dev": "nodemon --config \"./util/nodemon.json\"/",
     "start": "npm run build && node build"
   },
@@ -25,6 +26,7 @@
     "exclude": [
       "**/*.interface.ts",
       "src/db/migrate",
+      "src/db/seeders",
       "src/index.ts",
       "src/db/models/index.ts"
     ],
@@ -80,6 +82,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.7",
     "@sendgrid/mail": "^6.4.0",
+    "@types/faker": "^4.1.9",
     "@types/google-libphonenumber": "^7.4.17",
     "@types/sequelize": "^4.28.5",
     "africastalking": "^0.4.3",
@@ -88,8 +91,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "google-libphonenumber": "^3.2.6",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "sequelize": "^5.19.1",
