feat(password-reset): password reset functionality - add password reset request endpoint - add update endpoint - write unit tests - write integration tests [#165742482]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs: # a collection of steps
           command: npm test
           environment:
             JWT_SECRET: 'SecretOrPrivateKey'
+            PASSWORD_RESET_SECRET: 'SecretOrPrivateKey'
             DEV_DB_URL: 'postgres://safescrow_user@localhost:5432/safescrow_db'
       - run: # Drop DB
           name: Drop Database
