--- a/package.json
+++ b/package.json
@@ -52,12 +52,16 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "@types/faker": "^4.1.9",
+    "@types/google-libphonenumber": "^7.4.17",
     "@types/hapi__joi": "^15.0.4",
     "@types/jsonwebtoken": "^8.3.4",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.9",
+    "@types/sequelize": "^4.28.5",
     "@types/shortid": "0.0.29",
+    "@types/sinon": "^7.5.1",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
     "chai": "^4.2.0",
@@ -83,9 +87,6 @@
   "dependencies": {
     "@hapi/joi": "^16.1.7",
     "@sendgrid/mail": "^6.4.0",
-    "@types/faker": "^4.1.9",
-    "@types/google-libphonenumber": "^7.4.17",
-    "@types/sequelize": "^4.28.5",
     "africastalking": "^0.4.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -99,6 +100,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "sequelize": "^5.19.1",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "sinon": "^8.1.1"
   }
 }
