--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.13.0",
     "mocha": "^6.2.1",
+    "node-mocks-http": "^1.8.1",
     "nodemon": "^1.19.0",
     "nyc": "^14.1.1",
     "prettier": "^1.18.2",
