ft(auth): implement login functionality
- write test to cover login edge cases
- create loginUser method in auth controller

[FINISH #171361406]

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ],
     "exclude": [
       "**/*.interface.ts",
+      "src/db/config",
       "src/db/migrate",
       "src/db/seeders",
       "src/index.ts",
